--- a/www/main.css
+++ b/www/main.css
@@ -1,64 +1,75 @@
 body {
-  margin: 0;
-  font-size: 28px;
+    margin: 0;
+    font-size: 28px;
 }
 
 .header {
-  background-color: white;
-  padding: 10px;
-  text-align: center;
+    background-color: white;
+    padding: 10px;
+    text-align: center;
 }
 
 #navbar {
-  overflow: hidden;
-  background-color: #333;
+    overflow: hidden;
+    background-color: #333;
+    font-family: 'Raleway', sans-serif;
 }
 
 #navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 0.6em;
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 0.6em;
 }
 
 #navbar a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 #navbar a.active {
-  background-color: #3f9ca4;
-  color: white;
+    background-color: #3f9ca4;
+    color: white;
 }
 
 .content {
-  padding: 16px;
+    padding: 16px;
 }
 
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
+    position: fixed;
+    top: 0;
+    width: 100%
 }
 
 .sticky + .content {
-  padding-top: 60px;
+    padding-top: 60px;
 }
 
-.botoia{
+.botoia {
     display: inline-block;
     padding: 0;
     margin: 0;
 }
 
-.botoiimg{
+.botoiimg {
     height: auto;
     max-width: 48px;
     padding: 0;
     margin: 0;
+}
+
+#tituloa {
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 3vw;
+}
+
+.botoia.active{
+    background-color: white;
 }
 
 
